src/components/pattern_editor/styles.css
.widget.pattern-editor {
  display: flex;
  width: 100%;
  height: 100%;
  overflow: hidden;
  flex: 1;
}

.pattern-editor .control-panel {
  flex-direction: row;
}

.pattern-editor .controls {
  flex-grow: 0;
  background: #444;
  border-radius: 3px;
}

.chrome.grid-stack-item-content.record {
  border-color: red;
}

.hscroll {
  background: black;
  flex: 1 1 auto;
  display: flex;
  position: relative;
}

.hscroll .pattern {
    display: flex;
    flex-direction: row;
    flex: 1 1 auto;
    width: 100%;
}

.hscroll .pattern .patterndata {
    border: 1px solid white;
    flex: 1 1 auto;
    overflow-x: auto;
    overflow-y: hidden;
    position: relative;
    margin-bottom: 3px;
}

.hscroll .pattern .patterndata::-webkit-scrollbar {
    -webkit-appearance: none;
}

.hscroll .pattern .patterndata::-webkit-scrollbar:horizontal {
    height: 11px;
}

.hscroll .pattern .patterndata::-webkit-scrollbar-thumb {
    border-radius: 2px;
    border: 1px solid #93C3E9; /* should match background, can't be transparent */
    background-color: #A0D4FD;
}

.hscroll .pattern .patterndata::-webkit-scrollbar-track {
    background-color: #333;
    border-radius: 8px;
}


.hscroll .pattern .timeline {
    border: 1px solid black;
}

.hscroll .track-names {
    position: absolute;
    display: flex;
    flex-direction: row;
    margin-top: 5px;
}

.hscroll .track-names .track-name {
    color: white;
    flex: 1 1 auto;
    text-align: center;
    font-family: monospace;
}

.hscroll .track-names input.inline-editor {
  font-size: 1em;
  font-family: monospace;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  flex: 1 1 auto;
  text-align: center;
  color: white;
  padding: 0;
}

